DSLtoSQLParser.java
// Generated from DSLtoSQL.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DSLtoSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, METHOD=11, WHITESPACE=12, ARG=13, NAME=14, MAPPINGS=15, PROPERTIES=16, 
		TYPE=17, INDEX=18, CREATE=19, UPDATE=20, DELETE=21, DOC=22, QUERY=23, 
		BOOL=24, MUST=25, MUSTNOT=26, SHOULD=27, FILTER=28, MATCHALL=29, MATCH=30, 
		MULTIMATCH=31, TERM=32, TERMS=33, RANGE=34, GT=35, GTE=36, LT=37, LTE=38, 
		SOURCE=39, EXCLUDES=40, INCLUDES=41, AGGS=42, AVG=43, SUM=44, MAX=45, 
		MIN=46, VALUE_COUNT=47, SORT=48, ORDER=49, STRING=50, NUMBER=51;
	public static final int
		RULE_dsl = 0, RULE_header = 1, RULE_address = 2, RULE_body = 3, RULE_object = 4, 
		RULE_pair = 5, RULE_array = 6, RULE_value = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"dsl", "header", "address", "body", "object", "pair", "array", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'/'", "'{'", "','", "'}'", "':'", "'['", "']'", "'true'", "'false'", 
			"'null'", null, null, null, null, "'\"mappings\"'", "'\"properties\"'", 
			"'\"type\"'", "'\"index\"'", "'\"create\"'", "'\"update\"'", "'\"delete\"'", 
			"'\"doc\"'", "'\"query\"'", "'\"bool\"'", "'\"must\"'", "'\"must_not\"'", 
			"'\"should\"'", "'\"filter\"'", "'\"match_all\"'", "'\"match\"'", "'\"multimatch\"'", 
			"'\"term\"'", "'\"terms\"'", "'\"range\"'", "'\"gt\"'", "'\"gte\"'", 
			"'\"lt\"'", "'\"lte\"'", "'\"_source\"'", "'\"excludes\"'", "'\"includes\"'", 
			"'\"aggs\"'", "'\"avg\"'", "'\"sum\"'", "'\"max\"'", "'\"min\"'", "'\"value_count\"'", 
			"'\"sort\"'", "'\"order\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "METHOD", 
			"WHITESPACE", "ARG", "NAME", "MAPPINGS", "PROPERTIES", "TYPE", "INDEX", 
			"CREATE", "UPDATE", "DELETE", "DOC", "QUERY", "BOOL", "MUST", "MUSTNOT", 
			"SHOULD", "FILTER", "MATCHALL", "MATCH", "MULTIMATCH", "TERM", "TERMS", 
			"RANGE", "GT", "GTE", "LT", "LTE", "SOURCE", "EXCLUDES", "INCLUDES", 
			"AGGS", "AVG", "SUM", "MAX", "MIN", "VALUE_COUNT", "SORT", "ORDER", "STRING", 
			"NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DSLtoSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DSLtoSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DslContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DSLtoSQLParser.EOF, 0); }
		public DslContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dsl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterDsl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitDsl(this);
		}
	}

	public final DslContext dsl() throws RecognitionException {
		DslContext _localctx = new DslContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dsl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			header();
			setState(17);
			body();
			setState(18);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode METHOD() { return getToken(DSLtoSQLParser.METHOD, 0); }
		public AddressContext address() {
			return getRuleContext(AddressContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			match(METHOD);
			setState(21);
			address();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AddressContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(DSLtoSQLParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(DSLtoSQLParser.NAME, i);
		}
		public List<TerminalNode> ARG() { return getTokens(DSLtoSQLParser.ARG); }
		public TerminalNode ARG(int i) {
			return getToken(DSLtoSQLParser.ARG, i);
		}
		public AddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_address; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterAddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitAddress(this);
		}
	}

	public final AddressContext address() throws RecognitionException {
		AddressContext _localctx = new AddressContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_address);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(23);
				match(T__0);
				}
			}

			setState(26);
			match(NAME);
			setState(31);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(27);
					match(T__0);
					setState(28);
					match(NAME);
					}
					} 
				}
				setState(33);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(34);
				match(T__0);
				setState(35);
				match(ARG);
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<ObjectContext> object() {
			return getRuleContexts(ObjectContext.class);
		}
		public ObjectContext object(int i) {
			return getRuleContext(ObjectContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(41);
				object();
				}
				}
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectContext extends ParserRuleContext {
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
	 
		public ObjectContext() { }
		public void copyFrom(ObjectContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AnObjectContext extends ObjectContext {
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public AnObjectContext(ObjectContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterAnObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitAnObject(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyObjectContext extends ObjectContext {
		public EmptyObjectContext(ObjectContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterEmptyObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitEmptyObject(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_object);
		int _la;
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new AnObjectContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				match(T__1);
				setState(47);
				pair();
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(48);
					match(T__2);
					setState(49);
					pair();
					}
					}
					setState(54);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(55);
				match(T__3);
				}
				break;
			case 2:
				_localctx = new EmptyObjectContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				match(T__1);
				setState(58);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PairContext extends ParserRuleContext {
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
	 
		public PairContext() { }
		public void copyFrom(PairContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeleteContext extends PairContext {
		public TerminalNode DELETE() { return getToken(DSLtoSQLParser.DELETE, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public DeleteContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterDelete(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitDelete(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ShouldContext extends PairContext {
		public TerminalNode SHOULD() { return getToken(DSLtoSQLParser.SHOULD, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ShouldContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterShould(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitShould(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends PairContext {
		public TerminalNode QUERY() { return getToken(DSLtoSQLParser.QUERY, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public QueryContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitQuery(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MaxContext extends PairContext {
		public TerminalNode MAX() { return getToken(DSLtoSQLParser.MAX, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public MaxContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterMax(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitMax(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PropertiesContext extends PairContext {
		public TerminalNode PROPERTIES() { return getToken(DSLtoSQLParser.PROPERTIES, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public PropertiesContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterProperties(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitProperties(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UpdateContext extends PairContext {
		public TerminalNode UPDATE() { return getToken(DSLtoSQLParser.UPDATE, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public UpdateContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterUpdate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitUpdate(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExcludesContext extends PairContext {
		public TerminalNode EXCLUDES() { return getToken(DSLtoSQLParser.EXCLUDES, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ExcludesContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterExcludes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitExcludes(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MustContext extends PairContext {
		public TerminalNode MUST() { return getToken(DSLtoSQLParser.MUST, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public MustContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterMust(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitMust(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GtContext extends PairContext {
		public TerminalNode GT() { return getToken(DSLtoSQLParser.GT, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public GtContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterGt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitGt(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends PairContext {
		public TerminalNode SOURCE() { return getToken(DSLtoSQLParser.SOURCE, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public SourceContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitSource(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MatchContext extends PairContext {
		public TerminalNode MATCH() { return getToken(DSLtoSQLParser.MATCH, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public MatchContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterMatch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitMatch(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IncludesContext extends PairContext {
		public TerminalNode INCLUDES() { return getToken(DSLtoSQLParser.INCLUDES, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public IncludesContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterIncludes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitIncludes(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BoolContext extends PairContext {
		public TerminalNode BOOL() { return getToken(DSLtoSQLParser.BOOL, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public BoolContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitBool(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CreateContext extends PairContext {
		public TerminalNode CREATE() { return getToken(DSLtoSQLParser.CREATE, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public CreateContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterCreate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitCreate(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DocContext extends PairContext {
		public TerminalNode DOC() { return getToken(DSLtoSQLParser.DOC, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public DocContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterDoc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitDoc(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SortContext extends PairContext {
		public TerminalNode SORT() { return getToken(DSLtoSQLParser.SORT, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public SortContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterSort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitSort(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MustNotContext extends PairContext {
		public TerminalNode MUSTNOT() { return getToken(DSLtoSQLParser.MUSTNOT, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public MustNotContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterMustNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitMustNot(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrderContext extends PairContext {
		public TerminalNode ORDER() { return getToken(DSLtoSQLParser.ORDER, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public OrderContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterOrder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitOrder(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TermsContext extends PairContext {
		public TerminalNode TERMS() { return getToken(DSLtoSQLParser.TERMS, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TermsContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterTerms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitTerms(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LtContext extends PairContext {
		public TerminalNode LT() { return getToken(DSLtoSQLParser.LT, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public LtContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterLt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitLt(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SumContext extends PairContext {
		public TerminalNode SUM() { return getToken(DSLtoSQLParser.SUM, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public SumContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterSum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitSum(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultiMatchContext extends PairContext {
		public TerminalNode MULTIMATCH() { return getToken(DSLtoSQLParser.MULTIMATCH, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public MultiMatchContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterMultiMatch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitMultiMatch(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TermContext extends PairContext {
		public TerminalNode TERM() { return getToken(DSLtoSQLParser.TERM, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TermContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitTerm(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RangeContext extends PairContext {
		public TerminalNode RANGE() { return getToken(DSLtoSQLParser.RANGE, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public RangeContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).exitRange(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AggsContext extends PairContext {
		public TerminalNode AGGS() { return getToken(DSLtoSQLParser.AGGS, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public AggsContext(PairContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLtoSQLListener ) ((DSLtoSQLListener)listener).enterAggs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
